fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -319,6 +319,8 @@ h1 {
 
 #meteoblue-einfach {
     border: 2px solid #d7d7d7;
+    width: 100%;
+    overflow-x: auto;
 }
 
 #meteoblue-einfach,
